--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
-  text-align: center;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  scroll-behavior: smooth;
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.common-signup-div {
   min-height: 100vh;
+}
+
+.common-signup-div h2 {
+  font-family: 'Mirza', cursive;
+  font-size: 48px;
+  margin-bottom: 2.5rem;
+}
+
+.common-signup-div .inner-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #c1c1c1;
+  height: 17rem;
+  padding: 1.5rem 2rem;
+}
+
+.common-signup-div .inner-card img {
+  width: 9rem;
+}
+
+.common-signup-div .inner-card h3 {
+  font-size: 22px;
+  margin-top: 2rem;
+}
+
+.common-signup-div .a-btn {
+  background: -webkit-gradient(linear, left top, right top, from(#396afc), to(#2948ff));
+  background: linear-gradient(to right, #396afc, #2948ff);
+  color: white;
+  display: block;
+  text-decoration: none;
+  text-align: center;
+  padding: 0.7rem;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-top: 1rem;
+  border-radius: 0px;
+}
+
+.filter-form-MUI-input-text {
+  margin-bottom: .8rem;
+}
+
+.filter-form-MUI-input-text .input-div {
+  position: relative;
+  height: 44px;
+}
+
+.filter-form-MUI-input-text .input-div .inner-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: inherit;
+  font-size: 0.875rem;
+  color: #7e7e7e;
+  outline: none;
+  background: none;
+  border: 1px solid #ced4da;
+  padding: 3.5px 7px;
+  border-radius: 0.2rem;
+}
+
+.filter-form-MUI-input-text .input-div .inner-input:hover {
+  border-color: #9f9f9f;
+}
+
+.filter-form-MUI-input-text .input-div .inner-input:focus {
+  border-color: #9f9f9f;
+}
+
+.filter-form-MUI-input-text .input-div .inner-label {
+  font-size: 0.875rem;
+  position: absolute;
+  left: .6rem;
+  top: 0.8rem;
+  color: #7e7e7e;
+  cursor: text;
+  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+  background-color: white;
+}
+
+.filter-form-MUI-input-text .inner-input:focus ~ .inner-label,
+.filter-form-MUI-input-text .inner-input:not(:placeholder-shown).inner-input:not(:focus) ~ .inner-label {
+  top: -0.5rem;
+  font-size: 0.8rem;
+  left: 0.8rem;
+  padding: 0 0.5rem;
+}
+
+.filter-form-MUI-input-text .inner-input:focus ~ span.required,
+.filter-form-MUI-input-text .inner-input:not(:placeholder-shown).inner-input:not(:focus) ~ span.required {
+  display: none;
+}
+
+.filter-form-MUI-input-text span.required {
+  display: block;
+  top: -0.5rem;
+  font-size: 0.65rem !important;
+  left: 1.1rem;
+  position: absolute;
+  background: white;
+  padding: 0 4px;
+  color: #fe1216;
+  font-weight: 500;
+  -webkit-transition: display 200ms ease-in;
+  transition: display 200ms ease-in;
+}
+
+.filter-form-MUI-input-text span.error {
+  font-size: 11px;
+  color: #fe1216;
+  font-weight: 500;
+  margin-left: .5rem;
+}
+
+.filter-form-MUI-radio-btn {
+  padding-top: 0.35rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.filter-form-MUI-radio-btn input {
+  width: 1em;
+  height: 1em;
+}
+
+.filter-form-MUI-radio-btn label {
+  color: #7e7e7e;
+}
+
+.filter-form-MUI-radio-btn .form-check-input:checked[type=radio] {
+  background-image: none;
+  border: 3.5px solid white;
+  outline: 1px solid #707070;
+}
+
+.filter-form-MUI-radio-btn .form-check-input:checked {
+  background-color: #035aab;
+}
+
+.custom-sm-btn {
+  background: #2948ff;
+  color: white;
+  font-size: 1rem;
+  margin-top: 1.5rem;
+  font-weight: 500;
+}
+
+.custom-sm-btn:hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media (max-width: 1199.9px) {
+  .filter-form-MUI-input-text .input-div {
+    height: 48px;
+  }
+  .filter-form-MUI-input-text .input-div .inner-label {
+    top: 1.1rem;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 1025px) {
+  .signup-sponsor-div .h-custom {
+    height: 100vh !important;
   }
 }
+/*# sourceMappingURL=App.css.map */
