--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@
 }
 
 .filter-form-MUI-input-text {
-  margin-bottom: .8rem;
+  margin-bottom: 1rem;
 }
 
 .filter-form-MUI-input-text .input-div {
@@ -140,9 +140,6 @@
 
 .filter-form-MUI-radio-btn {
   padding-top: 0.35rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .filter-form-MUI-radio-btn input {
@@ -162,6 +159,49 @@
 
 .filter-form-MUI-radio-btn .form-check-input:checked {
   background-color: #035aab;
+}
+
+.filter-form-MUI-calendar .input-div {
+  position: relative;
+  height: 44px;
+}
+
+.filter-form-MUI-calendar .input-div .inner-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: inherit;
+  font-size: 0.875rem;
+  color: #7e7e7e;
+  outline: none;
+  background: none;
+  border: 1px solid #ced4da;
+  padding: 3.5px 7px;
+  border-radius: 0.2rem;
+}
+
+.filter-form-MUI-calendar .input-div .inner-input:hover {
+  border-color: #9f9f9f;
+}
+
+.filter-form-MUI-calendar .input-div .inner-input:focus {
+  border-color: #9f9f9f;
+}
+
+.filter-form-MUI-calendar .input-div .inner-label {
+  position: absolute;
+  color: #7e7e7e;
+  cursor: text;
+  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+  background-color: white;
+  top: -0.4rem;
+  line-height: 0.8;
+  font-size: 0.8rem;
+  left: 0.8rem;
+  padding: 0 0.5rem;
 }
 
 .custom-sm-btn {
@@ -185,9 +225,35 @@
   }
 }
 
+.signup-both-div h3 {
+  font-family: 'Mirza', cursive;
+  font-size: 36px;
+}
+
 @media (min-width: 1025px) {
-  .signup-sponsor-div .h-custom {
-    height: 100vh !important;
+  .signup-both-div .h-custom {
+    min-height: 100vh;
   }
+}
+
+.sponsor-dashboard-div .accordion-item {
+  border: 0;
+  border-bottom: 1px solid #00000020;
+  margin-bottom: 1rem;
+}
+
+.sponsor-dashboard-div .accordion-item .accordion-button {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.sponsor-dashboard-div .accordion-item .accordion-button:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.sponsor-dashboard-div .accordion-item .accordion-button:not(.collapsed) {
+  color: inherit;
+  background-color: inherit;
 }
 /*# sourceMappingURL=App.css.map */
