--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@
 
 // MUI input style
 .filter-form-MUI-input-text {
-    margin-bottom: .8rem;
+    margin-bottom: 1rem;
 
     .input-div {
         position: relative;
@@ -131,7 +131,6 @@
 
 .filter-form-MUI-radio-btn {
     padding-top: 0.35rem;
-    display: flex;
 
     input {
         width: 1em;
@@ -153,6 +152,50 @@
     }
 }
 
+.filter-form-MUI-calendar {
+    .input-div {
+        position: relative;
+        height: 44px;
+
+        .inner-input {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            font-family: inherit;
+            font-size: 0.875rem;
+            color: #7e7e7e;
+            outline: none;
+            background: none;
+            border: 1px solid #ced4da;
+            padding: 3.5px 7px;
+            border-radius: 0.2rem;
+
+            &:hover {
+                border-color: #9f9f9f;
+            }
+
+            &:focus {
+                border-color: #9f9f9f;
+            }
+        }
+
+        .inner-label {
+            position: absolute;
+            color: #7e7e7e;
+            cursor: text;
+            transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+            background-color: white;
+            top: -0.4rem;
+            line-height: 0.8;
+            font-size: 0.8rem;
+            left: 0.8rem;
+            padding: 0 0.5rem;
+        }
+    }
+}
+
 .custom-sm-btn {
     background: #2948ff;
     color: white;
@@ -160,7 +203,7 @@
     margin-top: 1.5rem;
     font-weight: 500;
 
-    &:hover{
+    &:hover {
         color: white;
     }
 }
@@ -177,11 +220,38 @@
     }
 }
 
-// sponsor signup page
-.signup-sponsor-div {
+// both signup page
+.signup-both-div {
+    h3 {
+        font-family: 'Mirza', cursive;
+        font-size: 36px;
+    }
+
     @media (min-width: 1025px) {
         .h-custom {
-            height: 100vh !important;
+            min-height: 100vh;
+        }
+    }
+}
+
+.sponsor-dashboard-div {
+    .accordion-item {
+        border: 0;
+        border-bottom: 1px solid #00000020;
+        margin-bottom: 1rem;
+
+        .accordion-button {
+            font-size: 14px;
+            font-weight: 500;
+
+            &:focus {
+                box-shadow: none;
+            }
+        }
+
+        .accordion-button:not(.collapsed) {
+            color: inherit;
+            background-color: inherit;
         }
     }
 }
