--- a/src/Style.css
+++ b/src/Style.css
@@ -12,8 +12,7 @@
 
 .account-detail-page .styling_name {
     font-family: 'Roboto', sans-serif;
-    color: rgb(126, 149, 159);
-    font-weight: '500';
+    color: #2948ff;
 
 }
 
