--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,10 @@
         transition: .3s ease-in-out;
         line-height: 0.8;
         margin-top: 8px;
+
+        img{
+            width: 18rem;
+        }
     }
 
     .navbar-nav a {
