--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,19 @@ code {
     monospace;
 }
 
-.carousel-job-card{
+.carousel-job-card {
   height: 50vh
 }
 
-.count-card{
-  background-color : #79C553;
-  color : white;
+.count-card {
+  background: linear-gradient(90deg, #92d072, #65bc37);
+  color: white;
   position: relative;
   padding: 10px 20px;
+  border-radius: 4px;
 }
 
-.count-card p:first-child{
+.count-card p:first-child {
   font-size: 48px;
   font-weight: bold;
   margin-bottom: 5px;
@@ -32,7 +33,8 @@ code {
 .count-card i {
   font-size: 80px;
   position: absolute;
-  top: 28%;
+  bottom: 10px;
   right: 20px;
-  opacity: 0.4;
+  opacity: 0.3;
+  color: white !important;
 }
