--- a/src/App.css
+++ b/src/App.css
@@ -371,8 +371,11 @@
 
 .refugee-cards .refugee-single-card .avatar-div img {
   width: 5rem;
-  border-radius: 100px;
+  border-radius: 100%;
   margin-right: 20px;
+  height: 5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .refugee-cards .refugee-single-card .avatar-div h5 {
