--- a/src/App.css
+++ b/src/App.css
@@ -361,6 +361,15 @@
   border-radius: 10px;
 }
 
+.refugee-cards .filter-btn {
+  padding: 0.5rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background-color: #2948ff;
+  color: white;
+}
+
 .refugee-cards .refugee-single-card {
   font-size: 15px;
 }
@@ -390,6 +399,7 @@
   margin: 0;
   font-weight: 500;
   color: #1e1e1e;
+  word-break: break-word;
 }
 
 .refugee-cards .refugee-single-card .avatar-div span {
@@ -503,6 +513,12 @@
   .signup-both-div .h-custom,
   .login-div .h-custom {
     min-height: 100vh;
+  }
+}
+
+@media (max-width: 430px) {
+  .navbar-div .navbar-brand img {
+    width: 14rem;
   }
 }
 /*# sourceMappingURL=App.css.map */
