--- a/src/App.scss
+++ b/src/App.scss
@@ -444,7 +444,8 @@
 }
 
 // my tickets div
-.my-tickets-div {
+.my-tickets-div,
+.all-jobs-div {
 
     .status-filter-div {
 
@@ -528,9 +529,9 @@
     }
 }
 
-@media (max-width: 430px){
-    .navbar-div{
-        .navbar-brand img{
+@media (max-width: 430px) {
+    .navbar-div {
+        .navbar-brand img {
             width: 14rem;
         }
     }
