--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,21 @@ code {
   opacity: 0.3;
   color: white !important;
 }
+
+/*loader CSS */
+.loader-div {
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 99999;
+    background: rgba(0, 0, 0, 0.75);
+    justify-content: center;
+    align-items: center;
+    cursor: progress;
+}
+.loader-div img {
+  max-width: 28rem;
+  width: 100%;
+}
