--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,11 @@
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
   line-height: 0.8;
-  margin-top: 8px;
 }
 
 .navbar-div .navbar-brand img {
-  width: 18rem;
+  width: 15rem;
+  margin-left: 2rem;
 }
 
 .navbar-div .navbar-nav a {
