--- a/src/App.scss
+++ b/src/App.scss
@@ -359,6 +359,13 @@
     }
 }
 
+.dashboard-heading-div {
+    border: 1px solid #d5e0d5;
+    border-radius: 10px;
+
+    img {}
+}
+
 .refugee-cards {
     border: 1px solid #d5e0d5;
     border-radius: 10px;
