--- a/src/App.scss
+++ b/src/App.scss
@@ -548,6 +548,28 @@ div#goog-gt-tt {
 .table-div {
     min-height: 70vh;
     box-shadow: rgba(149, 157, 165, .2) 0px 8px 24px;
+
+    th {
+        white-space: nowrap;
+    }
+
+    td {
+        white-space: nowrap;
+        font-size: 15px;
+
+        span {
+            min-width: 4.2rem;
+            display: inline-block;
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
+            font-weight: 500;
+            text-transform: capitalize;
+            letter-spacing: 0.2px;
+        }
+    }
 }
 
 // footer section
@@ -605,11 +627,83 @@ div#goog-gt-tt {
     }
 }
 
+
+.signup-both-div,
+.login-div {
+    .h-custom {
+        min-height: 100vh;
+    }
+}
+
 .signup-both-div,
 .login-div {
     @media (min-width: 1025px) {
         .h-custom {
             min-height: 100vh;
+        }
+    }
+}
+
+@media(max-width: 1200px) {
+    .account-detail-page {
+        .img-size {
+            width: 180px;
+            height: 180px;
+        }
+    }
+}
+
+@media(max-width: 992px) {
+    .account-detail-page {
+        .custom-sm-btn {
+            font-size: 14px;
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .table-div td {
+        font-size: 14px;
+    }
+
+    .account-detail-page {
+        .img-size {
+            width: 160px;
+            height: 160px;
+        }
+    }
+
+    .common-signup-div {
+        .inner-card {
+            height: 14rem;
+            padding: 1.5rem;
+
+            img {
+                width: 5rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .common-signup-div {
+        h2 {
+            font-size: 34px;
+            margin-top: 3.5rem;
+        }
+
+        .inner-card {
+            height: auto;
+            padding: 1.5rem;
+
+            img {
+                width: 5rem;
+            }
+        }
+
+        .a-btn {
+            margin-top: 0;
+            margin-bottom: 1.5rem;
         }
     }
 }
