--- a/src/App.css
+++ b/src/App.css
@@ -604,4 +604,8 @@ div#goog-gt-tt {
 
 .job-submit-btn {
   margin-top: 3rem !important;
+}
+
+.font-weight-bold {
+  font-weight: 800 !important;
 }/*# sourceMappingURL=App.css.map */
